Add "runs-on" attribute in mutation testing workflow
An attribute, "runs-on", has been included in the mutation testing workflow in the .github/workflows/infection.yml file. This attribute specifies that the workflow should be run on the latest version of Ubuntu.

--- a/.github/workflows/infection.yml
+++ b/.github/workflows/infection.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   mutation_testing:
     name: "5️⃣ Mutation Testing"
+    runs-on: "ubuntu-latest"
     steps:
       - name: "Set up PHP"
         uses: "shivammathur/setup-php@v2"
